--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: Xiyuan Hou
+name: Xiyuan HOU
 
 # Short bio or description (displayed in the header)
 description: Data Scientist, Machine Learning, Deep Learning, HCI, EEG
