--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Xiyuan HOU
 
 # Short bio or description (displayed in the header)
-description: Data Scientist, Machine Learning, Deep Learning, HCI, EEG
+description: Data Scientist, ML, DL, HCI, EEG
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
