--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Xiyuan HOU
 description: Data Scientist, ML, DL, HCI, EEG
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://github.com/xiyuanHou/xiyuanHou.github.io/blob/master/images/xiyuan-Snip20180515_22.png
 
 #
 # Flags below are optional
