--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,10 @@ name: Xiyuan HOU
 description: Data Scientist, ML, DL, HCI, EEG
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar:https://github.com/xiyuanHou/xiyuanHou.github.io/blob/master/images/Snip20180515_23.png
+avatar: https://raw.githubusercontent.com/xiyuanHou/xiyuanHou.github.io/master/images/Snip20180515_23.png
+# URL of your avatar or profile pic (you could use your GitHub profile pic)
+#avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+
 #
 # Flags below are optional
 #
