--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: Xiyuan HOU
+name: Hou Xi Yuan
 
 # Short bio or description (displayed in the header)
 description: Data Scientist, ML, DL, HCI, EEG
@@ -23,7 +23,7 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: evan912
+  github: 
   instagram:
   linkedin:
   pinterest:
